--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "Sai Sudheer kodavati",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mongoose": "^9.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
